--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.2.10",
+    "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "js-cookie": "^3.0.5",
-    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
+    "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "react-i18next": "^14.1.1"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
