--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.2",
+    "react-markdown": "^10.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
